--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 ###< symfony/phpunit-bridge ###
 
 .env
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
